--- a/costmap_converter/CMakeLists.txt
+++ b/costmap_converter/CMakeLists.txt
@@ -69,13 +69,13 @@ ament_target_dependencies(standalone_converter
   ${dependencies}
 )
 
+
 install(TARGETS costmap_converter
    DESTINATION lib
 )
 install(TARGETS standalone_converter
-   DESTINATION bin
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
-
 install(DIRECTORY include/
    DESTINATION include/
 )
