--- a/costmap_converter/package.xml
+++ b/costmap_converter/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>costmap_converter</name>
-  <version>0.1.2</version>
+  <version>0.2.0</version>
   <description>
     A ros package that includes plugins and nodes to convert occupied costmap2d cells to primitive types.
   </description>
@@ -12,7 +12,7 @@
   <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
   <author email="franz.albers@tu-dortmund.de">Franz Albers</author>
   <author email="otniel.rinaldo@tu-dortmund.de">Otniel Rinaldo</author> 
-
+  <author email="arthur@floatic.io">Myeonggyun Kim</author> 
   <license>BSD</license>
 
   <url type="website">http://wiki.ros.org/costmap_converter</url>
