--- a/costmap_converter/params/map_info.yaml
+++ b/costmap_converter/params/map_info.yaml
@@ -21,7 +21,7 @@ converter_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan_filtered
+          topic: /scan
           max_obstacle_height: 2.5
           clearing: True
           marking: True
