--- a/costmap_converter/params/tracker.yaml
+++ b/costmap_converter/params/tracker.yaml
@@ -20,7 +20,7 @@ converter_costmap:
       height: 8
       resolution: 0.05
       #robot_radius: 0.16
-      plugins: ["static_layer","obstacle_layer","multi_robot_layer"]
+      plugins: ["static_layer","obstacle_layer"]
       multi_robot_layer:
         plugin: "floatic_nav_costmap_layer::MultiRobotLayer"
         transform_tolerance: 1.0
@@ -37,7 +37,7 @@ converter_costmap:
           data_type: "LaserScan"
           raytrace_max_range: 10.0
           raytrace_min_range: 0.0
-          obstacle_max_range: 4.0
+          obstacle_max_range: 8.0
           obstacle_min_range: 0.0
           inf_is_vailed: True
       static_layer:
